k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankx-app
  labels:
    name: bankx-app
    managed: terraform
