k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hello
  namespace: bankx-app
  labels:
    app: nodejs-hello
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nodejs-hello
